--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "lint-staged": "^10.4.0",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
