--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/stric-boolean-expressions": "off",
     "space-before-function-paren": "off",
-    "@typescript-eslint/camelcase": "off"
+    "@typescript-eslint/camelcase": "off",
+    "no-unused-vars": 0,
+    "@typescript-eslint/no-unused-vars": ["off"]
   }
 }
