--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests",
+    "test:watch": "yarn test -- --watch",
+    "test:staged": "yarn test -- --findRelatedTests",
+    "test:ci": "yarn test -- --coverage"
   }
 }
