--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Iago Rocha Porto <iagorochaporto@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.7",
@@ -28,5 +29,8 @@
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
     "test:ci": "yarn test -- --coverage"
+  },
+  "dependencies": {
+    "axios": "^0.20.0"
   }
 }
