--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.7",
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "11",
@@ -31,6 +33,8 @@
     "test:ci": "yarn test -- --coverage"
   },
   "dependencies": {
-    "axios": "^0.20.0"
+    "axios": "^0.20.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
