--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "11",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
     "git-commit-msg-linter": "^3.0.0",
@@ -30,7 +32,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "start": "webpack-dev-server --open",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
     "test:ci": "yarn test -- --coverage"
