--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     },
     "allowJs": true,
     "resolveJsonModule": true,
-    "isolatedModules": false
+    "isolatedModules": false,
+    "strictNullChecks": true
   },
   "include": ["src"]
 }
