--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.3.0",
     "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "11",
     "eslint-plugin-import": "^2.22.1",
@@ -23,9 +24,14 @@
     "faker": "^5.1.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.2",
     "lint-staged": "^10.4.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.3",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
+    "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
