--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,6 @@
     "no-unused-vars": 0,
     "@typescript-eslint/no-unused-vars": ["off"],
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error",
-    
-  },
+    "react/jsx-uses-vars": "error"
+  }
 }
