--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": 0,
+    "@typescript-eslint/comma-spacing": 0,
+    "@typescript-eslint/require-await": 0,
     "space-before-function-paren": "off",
     "@typescript-eslint/camelcase": "off",
     "no-unused-vars": 0,
