--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": "Iago Rocha Porto <iagorochaporto@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@testing-library/react": "^11.0.4",
+    "@testing-library/react": "11.1.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.7",
-    "@types/react": "^16.9.52",
+    "@types/node": "14.11.10",
+    "@types/react": "16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "4.4.1",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.3.0",
+    "css-loader": "5.0.0",
     "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "11",
     "eslint-plugin-import": "^2.22.1",
@@ -29,14 +29,14 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.2",
     "jest-localstorage-mock": "^2.4.3",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "10.4.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
-    "ts-loader": "^8.0.4",
+    "ts-loader": "8.0.5",
     "typescript": "^4.0.3",
-    "webpack": "4.42.0",
+    "webpack": "5.1.3",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0"
@@ -46,12 +46,13 @@
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
-    "test:ci": "yarn test --coverage"
+    "test:ci": "yarn test --coverage",
+    "check": "yarn-check -u -s"
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-router-dom": "^5.2.0"
   }
 }
