--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "5.0.0",
+    "cypress": "^5.5.0",
     "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "11",
     "eslint-plugin-import": "^2.22.1",
@@ -47,10 +48,13 @@
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
+    "test:cypress": "cypress open",
     "check": "yarn-check -u -s"
   },
   "dependencies": {
+    "@cypress/webpack-preprocessor": "^5.4.10",
     "axios": "^0.20.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-router-dom": "^5.2.0"
