--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
     "isolatedModules": false,
     "strictNullChecks": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "src/main/test/cypress"
+  ]
 }
