--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Iago Rocha Porto <iagorochaporto@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.4.10",
     "@testing-library/react": "11.1.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
@@ -16,9 +17,10 @@
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "5.0.0",
-    "cypress": "^5.5.0",
+    "cypress": "6.0.0",
     "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "11",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -40,9 +42,7 @@
     "webpack": "5.1.3",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0",
-    "@cypress/webpack-preprocessor": "^5.4.10",
-    "eslint-plugin-cypress": "^2.11.2"
+    "webpack-merge": "^5.2.0"
   },
   "scripts": {
     "start": "webpack serve",
