--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.4.10",
+    "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "11.1.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
