--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Iago Rocha Porto <iagorochaporto@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.4.10",
+    "@cypress/webpack-preprocessor": "^5.4.5",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "11.1.0",
     "@types/axios": "^0.14.0",
@@ -18,10 +18,10 @@
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "5.0.0",
-    "cypress": "6.0.0",
+    "cypress": "^5.2.0",
     "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "11",
-    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
