--- a/package.json
+++ b/package.json
@@ -29,24 +29,27 @@
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
     "git-commit-msg-linter": "^3.0.0",
+    "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.2",
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "10.4.2",
+    "mini-css-extract-plugin": "^1.3.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
     "ts-loader": "8.0.5",
     "typescript": "^4.0.3",
-    "webpack": "5.1.3",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.5.1",
+    "webpack-merge": "^5.4.0"
   },
   "scripts": {
-    "start": "webpack serve",
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
