--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-merge": "^5.4.0"
   },
   "scripts": {
+    "start": "node index",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "jest --passWithNoTests --no-cache --runInBand",
@@ -61,6 +62,8 @@
     "axios": "^0.20.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1"
   }
 }
