--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "5.0.0",
     "cypress": "^5.2.0",
     "eslint": "^7.10.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
+    "full-icu": "^1.3.1",
     "git-commit-msg-linter": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
@@ -51,7 +53,7 @@
     "start": "node index",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
@@ -60,10 +62,10 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-router-dom": "^5.2.0",
-    "express": "^4.17.1",
-    "express-history-api-fallback": "^2.2.1"
+    "react-router-dom": "^5.2.0"
   }
 }
