chore: change travis ci file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_jds:
 script:
   - eslint 'src/**'
   - yarn test:ci
-build:
+deploy:
   provider: heroku
   api_key: $HEROKU_API
   app: fordevs-iagorocha
