--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
+    "favicons-webpack-plugin": "^4.2.0",
     "full-icu": "^1.3.1",
     "git-commit-msg-linter": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
