--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
   "hooks": {
     "pre-commit": "lint-staged",
-    "pre-push": "yarn test:ci"
+    "pre-push": "yarn test:ci && yarn run test:cypress:ci"
   }
 }
