--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mini-css-extract-plugin": "^1.3.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
+    "start-server-and-test": "^1.11.6",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
     "ts-loader": "8.0.5",
@@ -49,21 +50,24 @@
   },
   "scripts": {
     "start": "node index",
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "dev:base": "webpack-dev-server --config webpack.dev.js",
+    "dev": "yarn run dev:base -- --open",
     "build": "webpack --config webpack.prod.js",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
     "test:cypress": "cypress open",
+    "test:cypress:run": "cypress run",
+    "test:cypress:ci": "start-server-and-test dev:base http-get://localhost:8080 test:cypress:run",
     "check": "yarn-check -u -s"
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-router-dom": "^5.2.0",
-    "express": "^4.17.1",
-    "express-history-api-fallback": "^2.2.1"
+    "react-router-dom": "^5.2.0"
   }
 }
